# CodingSnake

./: .gitignore  CNAME  index.html
.github/workflows/: deploy-web.yml
adapter/: .gitignore  CMakeLists.txt  CodingSnake.hpp  README.md  build_release.py
adapter/release/: CodingSnake.hpp
assets/: index-B1hn3f4-.js  index-BDyPlS3v.js  index-BFavm6_6.css  index-BRa4Gy1Z.css  index-BYe93OMx.css  index-Be03dknh.css  index-C2AN7--a.css  index-C4TlQ8Td.js  index-CHBiQGFN.js  index-CIhsQxDV.js  index-CLxwA47p.js  index-CR1a83Si.js  index-CYqpeIXT.js  index-Cb2hbhGN.js  index-Ciiqs8HN.js  index-CxLqnZLy.js  index-Cxuuco01.js  index-CznUMe3Z.js  index-DDBD05Ou.css  index-DNNaXe2k.css  index-DTbUnkaH.js  index-Db5Phc9A.js  index-DgiPdOky.js  index-TEh8IlTX.css  index-W8ZM7n9L.js  index-mxDCXznm.js  index-n7z1zjty.js
bot/: README.md
server/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DATABASE.md  FILES.md  README.md  config.json  play_demo.py
server/data/: README.md  snake.db
server/include/database/: DatabaseManager.h  LeaderboardManager.h  SnapshotManager.h
server/include/handlers/: RouteHandler.h
server/include/managers/: GameManager.h  MapManager.h  PlayerManager.h
server/include/models/: Config.h  Direction.h  Food.h  GameState.h  Player.h  Point.h  Snake.h
server/include/utils/: Logger.h  PerformanceMonitor.h  RateLimiter.h  ResponseBuilder.h  Validator.h
server/src/: main.cpp
server/src/database/: DatabaseManager.cpp  LeaderboardManager.cpp  SnapshotManager.cpp
server/src/handlers/: RouteHandler.cpp
server/src/managers/: GameManager.cpp  MapManager.cpp  PlayerManager.cpp
server/src/models/: Config.cpp  Direction.cpp  Food.cpp  GameState.cpp  Player.cpp  Point.cpp  README_SNAKE.md  Snake.cpp
server/src/utils/: Logger.cpp  PerformanceMonitor.cpp  RateLimiter.cpp  ResponseBuilder.cpp  Validator.cpp
web/: README.md
web/frontend/: .env.production  .gitignore  README.md  build_run.sh  index.html  package.json  serve_static.py  tailwind.config.js  vite.config.ts
web/frontend/src/: App.vue  main.ts  style.css
web/frontend/src/api/: index.ts
web/frontend/src/constants/: index.ts
web/frontend/src/docs/: announcement.md  cpp.md  rules.md
web/frontend/src/router/: index.ts
web/frontend/src/stores/: game.ts  leaderboard.ts  ui.ts  viewer.ts
web/frontend/src/types/: index.d.ts
web/frontend/src/views/: AnnouncementView.vue  DocsView.vue  GameView.vue  WelcomeView.vue
